Fixed content control collapse on error

--- a/src/WebComponents/Attributes/persistent-object-attribute-edit.scss
+++ b/src/WebComponents/Attributes/persistent-object-attribute-edit.scss
@@ -48,7 +48,6 @@
 
     &[has-error] {
         .box {
-            @include relative();
             border-color: var(--theme-color-error) !important;
             overflow: hidden;
 
